--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
